base-2/apps/backend/lh_patient_backend/ingress-api-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresspatientbackend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: certificate_arn
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: ingress
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-node-labels: Name=nodegroup
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - host:
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
              name: servicepatientbackend
              port:
                number: 80
